roles/traefik/files/dashboard.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.powell.place`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  # tls:
  #   secretName: wildcard-powell-place-secret
