roles/traefik/files/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.powell.place`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
